# duilib-ffi

./: .gitignore  API.md  API_CORE.md  API_TEST_REPORT.md  README.md  build_simple.bat  test_compile.cpp  test_layout.cpp  web.lnk
demo/: CMakeLists.txt  NSIS_README.md  README.md  build_installer.bat  build_nsis_plugin.bat  installer_setup.nsi  installer_window_code.cpp  nsis_installer.cpp
duilib/DuiLib/: DuiLib.vcxproj  DuiLib_Static.vcxproj
duilib_c/: CMakeLists.txt  build.bat  duilib_c.h  duilib_c_internal.h  duilib_c_types.h  my_callback_utf8.c
duilib_c/control/: duilib_c_button.cpp  duilib_c_button.h  duilib_c_checkbox.h  duilib_c_combo.h  duilib_c_controls.cpp  duilib_c_controls.h  duilib_c_datetime.h  duilib_c_edit.h  duilib_c_label.cpp  duilib_c_label.h  duilib_c_option.cpp  duilib_c_option.h  duilib_c_progress.cpp  duilib_c_progress.h  duilib_c_scrollbar.h  duilib_c_slider.h  duilib_c_text.cpp  duilib_c_text.h
duilib_c/core/: duilib_c_base.cpp  duilib_c_base.h  duilib_c_container.cpp  duilib_c_container.h  duilib_c_control.cpp  duilib_c_control.h  duilib_c_dlgbuilder.cpp  duilib_c_dlgbuilder.h  duilib_c_manager.cpp  duilib_c_manager.h  duilib_c_markup.cpp  duilib_c_markup.h  duilib_c_render.cpp  duilib_c_render.h  duilib_c_window.h
duilib_c/layout/: duilib_c_childlayout.cpp  duilib_c_childlayout.h  duilib_c_horizontallayout.cpp  duilib_c_horizontallayout.h  duilib_c_layouts.cpp  duilib_c_layouts.h  duilib_c_tablayout.cpp  duilib_c_tablayout.h  duilib_c_tilelayout.cpp  duilib_c_tilelayout.h  duilib_c_verticallayout.cpp  duilib_c_verticallayout.h
duilib_c/utils/: duilib_c_delegate.cpp  duilib_c_delegate.h  duilib_c_flash.cpp  duilib_c_flash.h  duilib_c_utils.cpp  duilib_c_utils.h  duilib_c_winimplbase.cpp  duilib_c_winimplbase.h  duilib_c_wndshadow.cpp  duilib_c_wndshadow.h
nsis/: layout.xml  setup.nsi
nsis/skin/: setup.xml
